fix: align page to center

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,7 @@
 .page {
   max-width: 1440px;
   min-height: 100vh;
+  padding: 0 calc((100vw - 1440px) / 2);
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
   font-size: 18px;
